fix spacing

--- a/assets/css/tpx.css
+++ b/assets/css/tpx.css
@@ -112,6 +112,11 @@ h2.page-header
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000,endColorstr=#99000000)";
 }
 
+#show-grid
+{
+    padding-left: 45px;
+}
+
 /* footer */
 
 #footer-site-copy-right
